@@ -16,17 +16,17 @@
 
 package org.eaa690.aerie.controller;
 
-import org.eaa690.aerie.constant.PropertyKeyConstants;
+import org.eaa690.aerie.config.WeatherProperties;
 import org.eaa690.aerie.model.wx.METAR;
 import org.eaa690.aerie.exception.InvalidPayloadException;
 import org.eaa690.aerie.exception.ResourceNotFoundException;
-import org.eaa690.aerie.service.PropertyService;
 import org.eaa690.aerie.service.WeatherService;
 import org.apache.commons.collections.CollectionUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
@@ -53,11 +53,6 @@ public class WeatherController {
                     + "Please provide an accepted station identifier";
 
     /**
-     * NO_STATION_MSG.
-     */
-    public static final String NO_STATION_MSG = "No station was provided";
-
-    /**
      * ATLANTA.
      */
     public static final String ATLANTA = "atlanta";
@@ -69,20 +64,10 @@ public class WeatherController {
     private WeatherService weatherService;
 
     /**
-     * PropertyService.
+     * WeatherProperties.
      */
     @Autowired
-    private PropertyService propertyService;
-
-    /**
-     * Sets WeatherProperties.
-     *
-     * @param value WeatherProperties
-     */
-    @Autowired
-    public void setPropertyService(final PropertyService value) {
-        propertyService = value;
-    }
+    private WeatherProperties weatherProperties;
 
     /**
      * Sets WeatherService.
@@ -92,6 +77,25 @@ public class WeatherController {
     @Autowired
     public void setWeatherService(final WeatherService value) {
         weatherService = value;
+    }
+
+    /**
+     * Sets WeatherProperties.
+     *
+     * @param value WeatherProperties
+     */
+    @Autowired
+    public void setWeatherProperties(final WeatherProperties value) {
+        weatherProperties = value;
+    }
+
+    /**
+     * Updates weather information from AviationWeather.gov.
+     * Note: normally this is run automatically every 10 minutes
+     */
+    @PostMapping(path = {"/update"})
+    public void updateWeather() {
+        weatherService.update();
     }
 
     /**
@@ -115,16 +119,10 @@ public class WeatherController {
             InvalidPayloadException {
         final List<METAR> metars = new ArrayList<>();
         if (ATLANTA.equalsIgnoreCase(icao)) {
-            metars
-                    .addAll(
-                            weatherService
-                                    .getMETARs(Arrays
-                                            .asList(propertyService
-                                                    .get(PropertyKeyConstants.ATLANTA_ICAO_CODES_PROPERTY_KEY)
-                                                    .getValue()
-                                                    .split(","))));
+            metars.addAll(weatherService.getMETARs(
+                    Arrays.asList(weatherProperties.getAtlantaIcaoCodes().split(","))));
         } else if (weatherService.isValidStation(icao.toUpperCase())) {
-            metars.addAll(Arrays.asList(weatherService.getMETAR(icao.toUpperCase())));
+            metars.addAll(List.of(weatherService.getMETAR(icao.toUpperCase())));
         }
         if (CollectionUtils.isNotEmpty(metars)) {
             return filterAttributes(metars, dataList);
